--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "electron-builder",
     "dist": "electron-builder --publish always"
   },
-  "dependencies": {
+  "devDependencies": {
+    "electron-publisher-s3": "^19.45.0",
     "electron": "^1.7.9",
     "electron-builder": "^19.45.4"
   },
@@ -57,8 +58,5 @@
       "target": "nsis",
       "icon": "icon.ico"
     }
-  },
-  "devDependencies": {
-    "electron-publisher-s3": "^19.45.0"
   }
 }
