--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "build": "electron-builder",
     "dist": "electron-builder --publish always"
   },
+  "dependencies": {
+    "electron-debug": "^1.4.0"
+  },
   "devDependencies": {
     "electron": "^1.7.9",
     "electron-builder": "^19.45.4",
-    "electron-debug": "^1.4.0",
     "electron-publisher-s3": "^19.45.0"
   },
   "build": {
